// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ComboBox > should match its default snapshot 1`] = `
"<div class="inline-block w-full" data-id="sds-combo-box">
  <div class="inline-block w-full">
    <div class="relative">
      <!--v-if-->
      <div class="input-group">
        <div class="input-group-addon"><span class="sr-only">Combo box</span><svg viewBox="0 0 640 640" aria-hidden="true" role="img" width="1.2em" height="1.2em" class="w-4 h-4">
            <path fill="currentColor" d="M480 272c0 45.9-14.9 88.3-40 122.7l126.6 126.7c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L394.7 440c-34.4 25.1-76.8 40-122.7 40c-114.9 0-208-93.1-208-208S157.1 64 272 64s208 93.1 208 208M272 416c79.5 0 144-64.5 144-144s-64.5-144-144-144s-144 64.5-144 144s64.5 144 144 144"></path>
          </svg></div><input type="text" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control px-0 truncate overflow-hidden text-ellipsis whitespace-nowrap" value=""><!-- Validation input for select/taggable-select types - checks if selected array has items -->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!-- @slot Default content. Good for adding content to the end of the input group -->
      </div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match its snapshot with required prop assigned 1`] = `
"<div class="inline-block w-full" data-id="sds-combo-box">
  <div class="inline-block w-full">
    <div class="relative">
      <!--v-if-->
      <div class="input-group required">
        <div class="input-group-addon"><span class="sr-only">Combo box</span><svg viewBox="0 0 640 640" aria-hidden="true" role="img" width="1.2em" height="1.2em" class="w-4 h-4">
            <path fill="currentColor" d="M480 272c0 45.9-14.9 88.3-40 122.7l126.6 126.7c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L394.7 440c-34.4 25.1-76.8 40-122.7 40c-114.9 0-208-93.1-208-208S157.1 64 272 64s208 93.1 208 208M272 416c79.5 0 144-64.5 144-144s-64.5-144-144-144s-144 64.5-144 144s64.5 144 144 144"></path>
          </svg></div><input aria-required="true" type="text" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control px-0 truncate overflow-hidden text-ellipsis whitespace-nowrap" required="" value=""><!-- Validation input for select/taggable-select types - checks if selected array has items -->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!-- @slot Default content. Good for adding content to the end of the input group -->
      </div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match snapshot for grouped options 1`] = `
"<div class="inline-block w-full" data-id="sds-combo-box">
  <div class="inline-block w-full">
    <div class="relative">
      <!--v-if-->
      <div class="input-group">
        <div class="input-group-addon"><span class="sr-only">Combo box</span><svg viewBox="0 0 640 640" aria-hidden="true" role="img" width="1.2em" height="1.2em" class="w-4 h-4">
            <path fill="currentColor" d="M480 272c0 45.9-14.9 88.3-40 122.7l126.6 126.7c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L394.7 440c-34.4 25.1-76.8 40-122.7 40c-114.9 0-208-93.1-208-208S157.1 64 272 64s208 93.1 208 208M272 416c79.5 0 144-64.5 144-144s-64.5-144-144-144s-144 64.5-144 144s64.5 144 144 144"></path>
          </svg></div><input type="text" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control px-0 truncate overflow-hidden text-ellipsis whitespace-nowrap" value=""><!-- Validation input for select/taggable-select types - checks if selected array has items -->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!-- @slot Default content. Good for adding content to the end of the input group -->
      </div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match snapshot for optionType="a" 1`] = `
"<div class="inline-block w-full" data-id="sds-combo-box">
  <div class="inline-block w-full">
    <div class="relative">
      <!--v-if-->
      <div class="input-group">
        <div class="input-group-addon"><span class="sr-only">Combo box</span><svg viewBox="0 0 640 640" aria-hidden="true" role="img" width="1.2em" height="1.2em" class="w-4 h-4">
            <path fill="currentColor" d="M480 272c0 45.9-14.9 88.3-40 122.7l126.6 126.7c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L394.7 440c-34.4 25.1-76.8 40-122.7 40c-114.9 0-208-93.1-208-208S157.1 64 272 64s208 93.1 208 208M272 416c79.5 0 144-64.5 144-144s-64.5-144-144-144s-144 64.5-144 144s64.5 144 144 144"></path>
          </svg></div><input type="text" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control px-0 truncate overflow-hidden text-ellipsis whitespace-nowrap" value=""><!-- Validation input for select/taggable-select types - checks if selected array has items -->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!-- @slot Default content. Good for adding content to the end of the input group -->
      </div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match snapshot for optionType="custom" 1`] = `
"<div class="inline-block w-full" data-id="sds-combo-box">
  <div class="inline-block w-full">
    <div class="relative">
      <!--v-if-->
      <div class="input-group">
        <div class="input-group-addon"><span class="sr-only">Combo box</span><svg viewBox="0 0 640 640" aria-hidden="true" role="img" width="1.2em" height="1.2em" class="w-4 h-4">
            <path fill="currentColor" d="M480 272c0 45.9-14.9 88.3-40 122.7l126.6 126.7c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L394.7 440c-34.4 25.1-76.8 40-122.7 40c-114.9 0-208-93.1-208-208S157.1 64 272 64s208 93.1 208 208M272 416c79.5 0 144-64.5 144-144s-64.5-144-144-144s-144 64.5-144 144s64.5 144 144 144"></path>
          </svg></div><input type="text" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control px-0 truncate overflow-hidden text-ellipsis whitespace-nowrap" value=""><!-- Validation input for select/taggable-select types - checks if selected array has items -->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!-- @slot Default content. Good for adding content to the end of the input group -->
      </div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match snapshot for type="select" (multiple) 1`] = `
"<div class="inline-block w-full" data-id="sds-combo-box">
  <div class="inline-block w-full">
    <div class="relative focus-ring rounded-theme-sm">
      <div class="form-border border-b-0 rounded-t-theme-sm bg-gray-25 dark:bg-gray-900/50 flex flex-row flex-wrap gap-1 p-2 justify-start w-full">
        <div data-id="sds-tag" class="inline-flex items-center bg-white dark:bg-gray-850 shadow-none border border-gray-200 dark:border-gray-700 rounded-full sds-theme-plaid:rounded-md overflow-clip font-semibold text-gray-600 dark:text-gray-400 has-[a:hover]:bg-gray-25 dark:has-[a:hover]:bg-gray-850 has-[a:hover]:shadow-sm has-[a:hover]:border-gray-600 dark:has-[a:hover]:border-gray-400 has-[a:hover:active]:bg-gray-50 dark:has-[a:hover:active]:bg-gray-800 has-[a:hover:active]:shadow-sm has-[a:hover:active]:border-gray-900 dark:has-[a:hover:active]:border-gray-100 text-base leading-6 h-8 pl-3 pr-0 grow-0" data-readonly="false">
          <div class="flex flex-row flex-nowrap items-center gap-x-1">
            <!--v-if-->
            <!--v-if--><span class="overflow-hidden text-nowrap text-ellipsis max-w-60"><!-- @slot Label content. -->Apple</span><button type="button" class="flex flex-col items-center justify-center text-red-600 dark:text-red-300 hover:bg-red-50 dark:hover:bg-red-900 focus:outline-none focus-visible:bg-red-50 h-7.5 w-8"><svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" fill="none" preserveAspectRatio="xMidYMid meet" role="img">
                <path d="M13.1016 11.6484C13.457 11.9766 13.457 12.5508 13.1016 12.8789C12.9375 13.043 12.7188 13.125 12.5 13.125C12.2539 13.125 12.0352 13.043 11.8711 12.8789L9 10.0078L6.10156 12.8789C5.9375 13.043 5.71875 13.125 5.5 13.125C5.25391 13.125 5.03516 13.043 4.87109 12.8789C4.51562 12.5508 4.51562 11.9766 4.87109 11.6484L7.74219 8.75L4.87109 5.87891C4.51562 5.55078 4.51562 4.97656 4.87109 4.64844C5.19922 4.29297 5.77344 4.29297 6.10156 4.64844L9 7.51953L11.8711 4.64844C12.1992 4.29297 12.7734 4.29297 13.1016 4.64844C13.457 4.97656 13.457 5.55078 13.1016 5.87891L10.2305 8.77734L13.1016 11.6484Z" fill="currentColor"></path>
              </svg><span class="sr-only">Remove</span></button>
          </div>
        </div>
        <div data-id="sds-tag" class="inline-flex items-center bg-white dark:bg-gray-850 shadow-none border border-gray-200 dark:border-gray-700 rounded-full sds-theme-plaid:rounded-md overflow-clip font-semibold text-gray-600 dark:text-gray-400 has-[a:hover]:bg-gray-25 dark:has-[a:hover]:bg-gray-850 has-[a:hover]:shadow-sm has-[a:hover]:border-gray-600 dark:has-[a:hover]:border-gray-400 has-[a:hover:active]:bg-gray-50 dark:has-[a:hover:active]:bg-gray-800 has-[a:hover:active]:shadow-sm has-[a:hover:active]:border-gray-900 dark:has-[a:hover:active]:border-gray-100 text-base leading-6 h-8 pl-3 pr-0 grow-0" data-readonly="false">
          <div class="flex flex-row flex-nowrap items-center gap-x-1">
            <!--v-if-->
            <!--v-if--><span class="overflow-hidden text-nowrap text-ellipsis max-w-60"><!-- @slot Label content. -->Banana</span><button type="button" class="flex flex-col items-center justify-center text-red-600 dark:text-red-300 hover:bg-red-50 dark:hover:bg-red-900 focus:outline-none focus-visible:bg-red-50 h-7.5 w-8"><svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" fill="none" preserveAspectRatio="xMidYMid meet" role="img">
                <path d="M13.1016 11.6484C13.457 11.9766 13.457 12.5508 13.1016 12.8789C12.9375 13.043 12.7188 13.125 12.5 13.125C12.2539 13.125 12.0352 13.043 11.8711 12.8789L9 10.0078L6.10156 12.8789C5.9375 13.043 5.71875 13.125 5.5 13.125C5.25391 13.125 5.03516 13.043 4.87109 12.8789C4.51562 12.5508 4.51562 11.9766 4.87109 11.6484L7.74219 8.75L4.87109 5.87891C4.51562 5.55078 4.51562 4.97656 4.87109 4.64844C5.19922 4.29297 5.77344 4.29297 6.10156 4.64844L9 7.51953L11.8711 4.64844C12.1992 4.29297 12.7734 4.29297 13.1016 4.64844C13.457 4.97656 13.457 5.55078 13.1016 5.87891L10.2305 8.77734L13.1016 11.6484Z" fill="currentColor"></path>
              </svg><span class="sr-only">Remove</span></button>
          </div>
        </div>
      </div>
      <div class="input-group border-t-0 rounded-t-none ring-0! focus-within:ring-0!">
        <div class="input-group-addon"><span class="sr-only">Combo box</span><svg viewBox="0 0 640 640" aria-hidden="true" role="img" width="1.2em" height="1.2em" class="w-4 h-4">
            <path fill="currentColor" d="M480 272c0 45.9-14.9 88.3-40 122.7l126.6 126.7c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L394.7 440c-34.4 25.1-76.8 40-122.7 40c-114.9 0-208-93.1-208-208S157.1 64 272 64s208 93.1 208 208M272 416c79.5 0 144-64.5 144-144s-64.5-144-144-144s-144 64.5-144 144s64.5 144 144 144"></path>
          </svg></div><input type="text" multiple="" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control px-0 truncate overflow-hidden text-ellipsis whitespace-nowrap" value=""><!-- Validation input for select/taggable-select types - checks if selected array has items --><input type="text" tabindex="-1" class="absolute h-px p-0 m-0 overflow-hidden whitespace-nowrap border-0 left-1/2 -translate-x-1/2 -translate-y-1/2 top-full w-full" style="clip: rect(0px, 0px, 0px, 0px);" value="selected">
        <div class="input-group-addon"><button tabindex="-1" type="button" class="text-gray-500 hover:text-gray-900 dark:hover:text-gray-100 px-2"><span class="sr-only">Clear query</span><svg viewBox="0 0 640 640" aria-hidden="true" role="img" width="1.2em" height="1.2em">
              <path fill="currentColor" d="M183.1 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L275.2 320L137.9 457.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l137.3-137.4l137.4 137.3c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L365.8 320l137.3-137.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320.5 274.7z"></path>
            </svg></button></div>
        <!--v-if-->
        <!-- @slot Default content. Good for adding content to the end of the input group -->
      </div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match snapshot for type="select" (single) 1`] = `
"<div class="inline-block w-full" data-id="sds-combo-box">
  <div class="inline-block w-full">
    <div class="relative">
      <!--v-if-->
      <div class="input-group">
        <div class="input-group-addon"><span class="sr-only">Combo box</span><svg viewBox="0 0 640 640" aria-hidden="true" role="img" width="1.2em" height="1.2em" class="w-4 h-4">
            <path fill="currentColor" d="M480 272c0 45.9-14.9 88.3-40 122.7l126.6 126.7c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L394.7 440c-34.4 25.1-76.8 40-122.7 40c-114.9 0-208-93.1-208-208S157.1 64 272 64s208 93.1 208 208M272 416c79.5 0 144-64.5 144-144s-64.5-144-144-144s-144 64.5-144 144s64.5 144 144 144"></path>
          </svg></div><input type="text" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control px-0 truncate overflow-hidden text-ellipsis whitespace-nowrap" value=""><!-- Validation input for select/taggable-select types - checks if selected array has items --><input type="text" tabindex="-1" class="absolute h-px p-0 m-0 overflow-hidden whitespace-nowrap border-0 left-1/2 -translate-x-1/2 -translate-y-1/2 top-full w-full" style="clip: rect(0px, 0px, 0px, 0px);" value="">
        <!--v-if-->
        <!--v-if-->
        <!-- @slot Default content. Good for adding content to the end of the input group -->
      </div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match snapshot for type="taggable-select" (multiple) 1`] = `
"<div class="inline-block w-full" data-id="sds-combo-box">
  <div class="inline-block w-full">
    <div class="relative focus-ring rounded-theme-sm">
      <div class="form-border border-b-0 rounded-t-theme-sm bg-gray-25 dark:bg-gray-900/50 flex flex-row flex-wrap gap-1 p-2 justify-start w-full">
        <div data-id="sds-tag" class="inline-flex items-center bg-white dark:bg-gray-850 shadow-none border border-gray-200 dark:border-gray-700 rounded-full sds-theme-plaid:rounded-md overflow-clip font-semibold text-gray-600 dark:text-gray-400 has-[a:hover]:bg-gray-25 dark:has-[a:hover]:bg-gray-850 has-[a:hover]:shadow-sm has-[a:hover]:border-gray-600 dark:has-[a:hover]:border-gray-400 has-[a:hover:active]:bg-gray-50 dark:has-[a:hover:active]:bg-gray-800 has-[a:hover:active]:shadow-sm has-[a:hover:active]:border-gray-900 dark:has-[a:hover:active]:border-gray-100 text-base leading-6 h-8 pl-3 pr-0 grow-0" data-readonly="false">
          <div class="flex flex-row flex-nowrap items-center gap-x-1">
            <!--v-if-->
            <!--v-if--><span class="overflow-hidden text-nowrap text-ellipsis max-w-60"><!-- @slot Label content. -->Apple</span><button type="button" class="flex flex-col items-center justify-center text-red-600 dark:text-red-300 hover:bg-red-50 dark:hover:bg-red-900 focus:outline-none focus-visible:bg-red-50 h-7.5 w-8"><svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" fill="none" preserveAspectRatio="xMidYMid meet" role="img">
                <path d="M13.1016 11.6484C13.457 11.9766 13.457 12.5508 13.1016 12.8789C12.9375 13.043 12.7188 13.125 12.5 13.125C12.2539 13.125 12.0352 13.043 11.8711 12.8789L9 10.0078L6.10156 12.8789C5.9375 13.043 5.71875 13.125 5.5 13.125C5.25391 13.125 5.03516 13.043 4.87109 12.8789C4.51562 12.5508 4.51562 11.9766 4.87109 11.6484L7.74219 8.75L4.87109 5.87891C4.51562 5.55078 4.51562 4.97656 4.87109 4.64844C5.19922 4.29297 5.77344 4.29297 6.10156 4.64844L9 7.51953L11.8711 4.64844C12.1992 4.29297 12.7734 4.29297 13.1016 4.64844C13.457 4.97656 13.457 5.55078 13.1016 5.87891L10.2305 8.77734L13.1016 11.6484Z" fill="currentColor"></path>
              </svg><span class="sr-only">Remove</span></button>
          </div>
        </div>
        <div data-id="sds-tag" class="inline-flex items-center bg-white dark:bg-gray-850 shadow-none border border-gray-200 dark:border-gray-700 rounded-full sds-theme-plaid:rounded-md overflow-clip font-semibold text-gray-600 dark:text-gray-400 has-[a:hover]:bg-gray-25 dark:has-[a:hover]:bg-gray-850 has-[a:hover]:shadow-sm has-[a:hover]:border-gray-600 dark:has-[a:hover]:border-gray-400 has-[a:hover:active]:bg-gray-50 dark:has-[a:hover:active]:bg-gray-800 has-[a:hover:active]:shadow-sm has-[a:hover:active]:border-gray-900 dark:has-[a:hover:active]:border-gray-100 text-base leading-6 h-8 pl-3 pr-0 grow-0" data-readonly="false">
          <div class="flex flex-row flex-nowrap items-center gap-x-1">
            <!--v-if-->
            <!--v-if--><span class="overflow-hidden text-nowrap text-ellipsis max-w-60"><!-- @slot Label content. -->Banana</span><button type="button" class="flex flex-col items-center justify-center text-red-600 dark:text-red-300 hover:bg-red-50 dark:hover:bg-red-900 focus:outline-none focus-visible:bg-red-50 h-7.5 w-8"><svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" fill="none" preserveAspectRatio="xMidYMid meet" role="img">
                <path d="M13.1016 11.6484C13.457 11.9766 13.457 12.5508 13.1016 12.8789C12.9375 13.043 12.7188 13.125 12.5 13.125C12.2539 13.125 12.0352 13.043 11.8711 12.8789L9 10.0078L6.10156 12.8789C5.9375 13.043 5.71875 13.125 5.5 13.125C5.25391 13.125 5.03516 13.043 4.87109 12.8789C4.51562 12.5508 4.51562 11.9766 4.87109 11.6484L7.74219 8.75L4.87109 5.87891C4.51562 5.55078 4.51562 4.97656 4.87109 4.64844C5.19922 4.29297 5.77344 4.29297 6.10156 4.64844L9 7.51953L11.8711 4.64844C12.1992 4.29297 12.7734 4.29297 13.1016 4.64844C13.457 4.97656 13.457 5.55078 13.1016 5.87891L10.2305 8.77734L13.1016 11.6484Z" fill="currentColor"></path>
              </svg><span class="sr-only">Remove</span></button>
          </div>
        </div>
      </div>
      <div class="input-group border-t-0 rounded-t-none ring-0! focus-within:ring-0!">
        <div class="input-group-addon"><span class="sr-only">Combo box</span><svg viewBox="0 0 640 640" aria-hidden="true" role="img" width="1.2em" height="1.2em" class="w-4 h-4">
            <path fill="currentColor" d="M480 272c0 45.9-14.9 88.3-40 122.7l126.6 126.7c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L394.7 440c-34.4 25.1-76.8 40-122.7 40c-114.9 0-208-93.1-208-208S157.1 64 272 64s208 93.1 208 208M272 416c79.5 0 144-64.5 144-144s-64.5-144-144-144s-144 64.5-144 144s64.5 144 144 144"></path>
          </svg></div><input type="text" multiple="" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control px-0 truncate overflow-hidden text-ellipsis whitespace-nowrap" value=""><!-- Validation input for select/taggable-select types - checks if selected array has items --><input type="text" tabindex="-1" class="absolute h-px p-0 m-0 overflow-hidden whitespace-nowrap border-0 left-1/2 -translate-x-1/2 -translate-y-1/2 top-full w-full" style="clip: rect(0px, 0px, 0px, 0px);" value="selected">
        <div class="input-group-addon"><button tabindex="-1" type="button" class="text-gray-500 hover:text-gray-900 dark:hover:text-gray-100 px-2"><span class="sr-only">Clear query</span><svg viewBox="0 0 640 640" aria-hidden="true" role="img" width="1.2em" height="1.2em">
              <path fill="currentColor" d="M183.1 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L275.2 320L137.9 457.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l137.3-137.4l137.4 137.3c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L365.8 320l137.3-137.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320.5 274.7z"></path>
            </svg></button></div>
        <!--v-if-->
        <!-- @slot Default content. Good for adding content to the end of the input group -->
      </div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match snapshot for type="taggable-select" (single) 1`] = `
"<div class="inline-block w-full" data-id="sds-combo-box">
  <div class="inline-block w-full">
    <div class="relative">
      <!--v-if-->
      <div class="input-group">
        <div class="input-group-addon"><span class="sr-only">Combo box</span><svg viewBox="0 0 640 640" aria-hidden="true" role="img" width="1.2em" height="1.2em" class="w-4 h-4">
            <path fill="currentColor" d="M480 272c0 45.9-14.9 88.3-40 122.7l126.6 126.7c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L394.7 440c-34.4 25.1-76.8 40-122.7 40c-114.9 0-208-93.1-208-208S157.1 64 272 64s208 93.1 208 208M272 416c79.5 0 144-64.5 144-144s-64.5-144-144-144s-144 64.5-144 144s64.5 144 144 144"></path>
          </svg></div><input type="text" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control px-0 truncate overflow-hidden text-ellipsis whitespace-nowrap" value=""><!-- Validation input for select/taggable-select types - checks if selected array has items --><input type="text" tabindex="-1" class="absolute h-px p-0 m-0 overflow-hidden whitespace-nowrap border-0 left-1/2 -translate-x-1/2 -translate-y-1/2 top-full w-full" style="clip: rect(0px, 0px, 0px, 0px);" value="">
        <!--v-if-->
        <!--v-if-->
        <!-- @slot Default content. Good for adding content to the end of the input group -->
      </div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match snapshot when autofocus is true 1`] = `
"<div class="inline-block w-full" data-id="sds-combo-box">
  <div class="inline-block w-full">
    <div class="relative">
      <!--v-if-->
      <div class="input-group">
        <div class="input-group-addon"><span class="sr-only">Combo box</span><svg viewBox="0 0 640 640" aria-hidden="true" role="img" width="1.2em" height="1.2em" class="w-4 h-4">
            <path fill="currentColor" d="M480 272c0 45.9-14.9 88.3-40 122.7l126.6 126.7c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L394.7 440c-34.4 25.1-76.8 40-122.7 40c-114.9 0-208-93.1-208-208S157.1 64 272 64s208 93.1 208 208M272 416c79.5 0 144-64.5 144-144s-64.5-144-144-144s-144 64.5-144 144s64.5 144 144 144"></path>
          </svg></div><input type="text" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control px-0 truncate overflow-hidden text-ellipsis whitespace-nowrap" value=""><!-- Validation input for select/taggable-select types - checks if selected array has items -->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!-- @slot Default content. Good for adding content to the end of the input group -->
      </div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match snapshot when disabled 1`] = `
"<div class="inline-block w-full" data-id="sds-combo-box">
  <div class="inline-block w-full">
    <div class="relative">
      <!--v-if-->
      <div class="input-group disabled">
        <div class="input-group-addon"><span class="sr-only">Combo box</span><svg viewBox="0 0 640 640" aria-hidden="true" role="img" width="1.2em" height="1.2em" class="w-4 h-4">
            <path fill="currentColor" d="M480 272c0 45.9-14.9 88.3-40 122.7l126.6 126.7c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L394.7 440c-34.4 25.1-76.8 40-122.7 40c-114.9 0-208-93.1-208-208S157.1 64 272 64s208 93.1 208 208M272 416c79.5 0 144-64.5 144-144s-64.5-144-144-144s-144 64.5-144 144s64.5 144 144 144"></path>
          </svg></div><input aria-disabled="true" type="text" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control px-0 truncate overflow-hidden text-ellipsis whitespace-nowrap" disabled="" value=""><!-- Validation input for select/taggable-select types - checks if selected array has items -->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!-- @slot Default content. Good for adding content to the end of the input group -->
      </div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match snapshot when loading 1`] = `
"<div class="inline-block w-full" data-id="sds-combo-box" loading="true">
  <div class="inline-block w-full">
    <div class="relative">
      <!--v-if-->
      <div class="input-group">
        <div class="input-group-addon"><span class="sr-only">Combo box</span><svg viewBox="0 0 640 640" aria-hidden="true" role="img" width="1.2em" height="1.2em" class="w-4 h-4">
            <path fill="currentColor" d="M480 272c0 45.9-14.9 88.3-40 122.7l126.6 126.7c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L394.7 440c-34.4 25.1-76.8 40-122.7 40c-114.9 0-208-93.1-208-208S157.1 64 272 64s208 93.1 208 208M272 416c79.5 0 144-64.5 144-144s-64.5-144-144-144s-144 64.5-144 144s64.5 144 144 144"></path>
          </svg></div><input type="text" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control px-0 truncate overflow-hidden text-ellipsis whitespace-nowrap" value=""><!-- Validation input for select/taggable-select types - checks if selected array has items -->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!-- @slot Default content. Good for adding content to the end of the input group -->
      </div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ComboBox > should match snapshot with custom value/label keys 1`] = `
"<div class="inline-block w-full" data-id="sds-combo-box">
  <div class="inline-block w-full">
    <div class="relative">
      <!--v-if-->
      <div class="input-group">
        <div class="input-group-addon"><span class="sr-only">Combo box</span><svg viewBox="0 0 640 640" aria-hidden="true" role="img" width="1.2em" height="1.2em" class="w-4 h-4">
            <path fill="currentColor" d="M480 272c0 45.9-14.9 88.3-40 122.7l126.6 126.7c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L394.7 440c-34.4 25.1-76.8 40-122.7 40c-114.9 0-208-93.1-208-208S157.1 64 272 64s208 93.1 208 208M272 416c79.5 0 144-64.5 144-144s-64.5-144-144-144s-144 64.5-144 144s64.5 144 144 144"></path>
          </svg></div><input type="text" autocapitalize="off" autocomplete="off" spellcheck="false" autocorrect="off" class="form-control px-0 truncate overflow-hidden text-ellipsis whitespace-nowrap" value=""><!-- Validation input for select/taggable-select types - checks if selected array has items -->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!-- @slot Default content. Good for adding content to the end of the input group -->
      </div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;
